[package]
name = "gcra-rate-limiter"
version = "0.3.0"
edition = "2024"
authors = ["Jeffery D. Mitchell", "<crusty-rustacean@gmail.com>"]
description = "A rate limiter based on the Generic Cell Rate Algorithm (GCRA)."
license = "MIT"
repository = "https://github.com/crustyrustacean/gcra-rate-limiter"
keywords = ["rate limiting", "GCRA", "algorithm", "throttling"]
categories = ["network-programming", "algorithms"]
readme = "README.md"
publish = false

[[bin]]
name = "gcra-rate-limiter"
path = "src/bin/main.rs"

[lib]
name = "gcra_rate_limiter"
path = "src/lib/lib.rs"

[dependencies]
parking_lot = "0.12.4"
threadpool = "1.8.1"
